Fix picker calendar header spacing

--- a/resources/css/components/_calendar.scss
+++ b/resources/css/components/_calendar.scss
@@ -29,7 +29,6 @@
 
   .calendar-weekdays {
     display: grid;
-    padding: 0 calc(var(--gap));
     grid-template-columns: repeat(var(--column-count), calc(100% / var(--column-count)));
   }
 
@@ -57,6 +56,7 @@
 
   .calendar-weekdays > * {
     border-bottom: 1px solid;
+    padding: 0 calc(var(--gap) / 2);
     white-space: nowrap;
     overflow: hidden;
   }
